@@ -25,6 +25,7 @@ import static org.apache.fineract.test.support.TestContextKey.WORKING_CAPITAL_NE
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.cucumber.datatable.DataTable;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
@@ -33,9 +34,11 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.fineract.client.feign.FineractFeignClient;
+import org.apache.fineract.client.feign.ObjectMapperFactory;
 import org.apache.fineract.client.feign.services.WorkingCapitalLoanProductsApi;
 import org.apache.fineract.client.feign.util.CallFailedRuntimeException;
 import org.apache.fineract.client.models.CommandProcessingResult;
@@ -47,7 +50,9 @@ import org.apache.fineract.client.models.GetWorkingCapitalLoanProductsProductIdR
 import org.apache.fineract.client.models.GetWorkingCapitalLoanProductsResponse;
 import org.apache.fineract.client.models.GetWorkingCapitalLoanProductsTemplateResponse;
 import org.apache.fineract.client.models.InternalWorkingCapitalLoanPaymentRequest;
+import org.apache.fineract.client.models.PaymentTypeToGLAccountMapper;
 import org.apache.fineract.client.models.PostAllowAttributeOverrides;
+import org.apache.fineract.client.models.PostPaymentAllocation;
 import org.apache.fineract.client.models.PostWorkingCapitalLoanProductsRequest;
 import org.apache.fineract.client.models.PostWorkingCapitalLoanProductsRequest.AccountingRuleEnum;
 import org.apache.fineract.client.models.PostWorkingCapitalLoanProductsResponse;
@@ -56,9 +61,17 @@ import org.apache.fineract.client.models.PutWorkingCapitalLoanProductsProductIdR
 import org.apache.fineract.client.models.PutWorkingCapitalLoanProductsProductIdResponse;
 import org.apache.fineract.client.models.StringEnumOptionData;
 import org.apache.fineract.client.models.WorkingCapitalBreachRequest;
+import org.apache.fineract.client.models.WorkingCapitalLoanPaymentChannelToFundSourceMappings;
 import org.apache.fineract.client.models.WorkingCapitalNearBreachRequest;
+import org.apache.fineract.client.models.WorkingCapitalPostChargeOffReasonToExpenseAccountMappings;
+import org.apache.fineract.client.models.WorkingCapitalPostWriteOffReasonToExpenseAccountMappings;
 import org.apache.fineract.test.data.accounttype.AccountTypeResolver;
 import org.apache.fineract.test.data.accounttype.DefaultAccountType;
+import org.apache.fineract.test.data.codevalue.CodeNames;
+import org.apache.fineract.test.data.codevalue.CodeValueResolver;
+import org.apache.fineract.test.data.codevalue.DefaultCodeValue;
+import org.apache.fineract.test.data.paymenttype.DefaultPaymentType;
+import org.apache.fineract.test.data.paymenttype.PaymentTypeResolver;
 import org.apache.fineract.test.data.workingcapitalproduct.DefaultWorkingCapitalLoanProduct;
 import org.apache.fineract.test.data.workingcapitalproduct.WCGLAccountMapping;
 import org.apache.fineract.test.data.workingcapitalproduct.WorkingCapitalBreachFrequencyType;
@@ -66,7 +79,10 @@ import org.apache.fineract.test.factory.LoanProductsRequestFactory;
 import org.apache.fineract.test.factory.WorkingCapitalRequestFactory;
 import org.apache.fineract.test.helper.ErrorMessageHelper;
 import org.apache.fineract.test.helper.Utils;
+import org.apache.fineract.test.helper.WorkingCapitalLoanProductAdvancedAccountingTestHelper;
+import org.apache.fineract.test.helper.WorkingCapitalLoanProductAdvancedAccountingTestHelper.AdvancedAccountingExpectation;
 import org.apache.fineract.test.stepdef.AbstractStepDef;
+import org.apache.fineract.test.support.TestContext;
 import org.apache.fineract.test.support.TestContextKey;
 import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.Assertions;
@@ -78,6 +94,12 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
     private final WorkingCapitalRequestFactory workingCapitalRequestFactory;
     private final FineractFeignClient fineractFeignClient;
     private final AccountTypeResolver accountTypeResolver;
+    private final PaymentTypeResolver paymentTypeResolver;
+    private final CodeValueResolver codeValueResolver;
+    private static final ObjectMapper OBJECT_MAPPER = ObjectMapperFactory.getShared();
+    private static final String WC_ADVANCED_MAPPINGS_EXPECTED_CREATE = "wcAdvancedMappingsExpectedCreate";
+    private static final String WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE = "wcAdvancedMappingsExpectedUpdate";
+    private static final String WC_ADVANCED_MAPPINGS_EXPECTED_FIRST_UPDATE = "wcAdvancedMappingsExpectedFirstUpdate";
 
     public static final String NAME_FIELD_NAME = "name";
     public static final String SHORT_NAME_FIELD = "shortName";
@@ -100,6 +122,7 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
     public static final String DELINQUENCY_BUCKET_ID_FIELD_NAME = "delinquencyBucketId";
     public static final String DELINQUENCY_GRACE_DAYS_FIELD_NAME = "delinquencyGraceDays";
     public static final String DELINQUENCY_START_TYPE_FIELD_NAME = "delinquencyStartType";
+    public static final String BREACH_GRACE_DAYS_FIELD_NAME = "breachGraceDays";
     public static final String BREACH_ID_FIELD_NAME = "breachId";
     public static final String NEAR_BREACH_ID_FIELD_NAME = "nearBreachId";
     public static final String LOCALE_FIELD_NAME = "locale";
@@ -304,7 +327,7 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
 
     @When("Admin creates a Working Capital Loan Product with custom breach config and overrides enabled:")
     public void createWorkingCapitalLoanProductWithCustomBreachConfig(final DataTable table) {
-        final Map<String, String> data = table.asMaps().get(0);
+        final Map<String, String> data = table.asMaps().getFirst();
 
         final String breachName = "WC Breach " + Utils.randomStringGenerator("", 10);
         final WorkingCapitalBreachRequest breachRequest = new WorkingCapitalBreachRequest().name(breachName)
@@ -318,14 +341,89 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
 
         final String graceDaysStr = data.get("delinquencyGraceDays");
         final Integer graceDays = graceDaysStr != null && !graceDaysStr.isEmpty() ? Integer.valueOf(graceDaysStr) : null;
+        final String breachGraceDaysStr = data.get(BREACH_GRACE_DAYS_FIELD_NAME);
+        final Integer breachGraceDays = breachGraceDaysStr != null && !breachGraceDaysStr.isEmpty() ? Integer.valueOf(breachGraceDaysStr)
+                : null;
 
         final String name = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
         final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory
                 .defaultWorkingCapitalLoanProductAllowAttributesOverrideRequest() //
                 .name(name) //
                 .breachId(breachId) //
-                .delinquencyGraceDays(graceDays);
+                .delinquencyGraceDays(graceDays) //
+                .breachGraceDays(breachGraceDays);
 
+        final PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_REQUEST, request);
+        checkWorkingCapitalLoanProductCreate();
+    }
+
+    @When("Admin creates a Working Capital Loan Product with breach and near breach config and overrides enabled:")
+    public void createWorkingCapitalLoanProductWithBreachAndNearBreachConfig(final DataTable table) {
+        final Map<String, String> data = table.asMaps().getFirst();
+
+        final String breachName = "WC Breach " + Utils.randomStringGenerator("", 10);
+        final WorkingCapitalBreachRequest breachRequest = new WorkingCapitalBreachRequest().name(breachName)
+                .breachFrequency(Integer.valueOf(data.get("breachFrequency"))).breachFrequencyType(data.get("breachFrequencyType"))
+                .breachAmountCalculationType(data.get("breachAmountCalculationType"))
+                .breachAmount(new BigDecimal(data.get("breachAmount")));
+        final CommandProcessingResult breachCreateResponse = ok(
+                () -> fineractFeignClient.workingCapitalBreaches().createWorkingCapitalBreach(breachRequest));
+        final Long breachId = breachCreateResponse.getResourceId();
+        testContext().set(TestContextKey.WORKING_CAPITAL_BREACH_ID, breachId);
+
+        final WorkingCapitalNearBreachRequest nearBreachRequest = new WorkingCapitalNearBreachRequest()
+                .nearBreachName("WC Near Breach " + Utils.randomStringGenerator("", 10))
+                .nearBreachFrequency(Integer.valueOf(data.get("nearBreachFrequency")))
+                .nearBreachFrequencyType(data.get("nearBreachFrequencyType"))
+                .nearBreachThreshold(new BigDecimal(data.get("nearBreachThreshold")));
+        final CommandProcessingResult nearBreachCreateResponse = ok(
+                () -> fineractFeignClient.workingCapitalNearBreaches().createWorkingCapitalNearBreach(nearBreachRequest));
+        final Long nearBreachId = nearBreachCreateResponse.getResourceId();
+        testContext().set(TestContextKey.WORKING_CAPITAL_NEAR_BREACH_ID, nearBreachId);
+
+        final String graceDaysStr = data.get("delinquencyGraceDays");
+        final Integer graceDays = graceDaysStr != null && !graceDaysStr.isEmpty() ? Integer.valueOf(graceDaysStr) : null;
+        final String breachGraceDaysStr = data.get(BREACH_GRACE_DAYS_FIELD_NAME);
+        final Integer breachGraceDays = breachGraceDaysStr != null && !breachGraceDaysStr.isEmpty() ? Integer.valueOf(breachGraceDaysStr)
+                : null;
+
+        final String name = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory
+                .defaultWorkingCapitalLoanProductAllowAttributesOverrideRequest() //
+                .name(name) //
+                .breachId(breachId) //
+                .nearBreachId(nearBreachId) //
+                .delinquencyGraceDays(graceDays) //
+                .breachGraceDays(breachGraceDays);
+
+        final PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_REQUEST, request);
+        checkWorkingCapitalLoanProductCreate();
+    }
+
+    @When("Admin creates a new Working Capital Loan Product with existing WC Delinquency Bucket")
+    public void createWorkingCapitalLoanProductWithExistingDelinquencyBucket() {
+        final Long bucketId = TestContext.GLOBAL.get(TestContextKey.DELINQUENCY_BUCKET_ID);
+        final String name = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory.defaultWorkingCapitalLoanProductRequest() //
+                .name(name) //
+                .delinquencyBucketId(bucketId);
+        final PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_REQUEST, request);
+        checkWorkingCapitalLoanProductCreate();
+    }
+
+    @When("Admin creates a new Working Capital Loan Product with existing WC Breach")
+    public void createWorkingCapitalLoanProductWithExistingBreach() {
+        final Long breachId = TestContext.INSTANCE.get(TestContextKey.WORKING_CAPITAL_BREACH_ID);
+        final String name = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory.defaultWorkingCapitalLoanProductRequest() //
+                .name(name) //
+                .breachId(breachId);
         final PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
         testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
         testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_REQUEST, request);
@@ -1027,7 +1125,9 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
                 .incomeFromPenaltyAccountId(source.getIncomeFromPenaltyAccountId())//
                 .incomeFromRecoveryAccountId(source.getIncomeFromRecoveryAccountId())//
                 .writeOffAccountId(source.getWriteOffAccountId())//
-                .overpaymentLiabilityAccountId(source.getOverpaymentLiabilityAccountId());
+                .overpaymentLiabilityAccountId(source.getOverpaymentLiabilityAccountId())//
+                .receivableFeeAccountId(source.getReceivableFeeAccountId())//
+                .receivablePenaltyAccountId(source.getReceivablePenaltyAccountId());
     }
 
     public void checkWorkingCapitalLoanProductCreate() {
@@ -1696,6 +1796,58 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
         testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_TEMPLATE_RESPONSE, template);
     }
 
+    @When("Admin creates a new Working Capital Loan Product with Cash based accounting and advanced mappings")
+    public void createWorkingCapitalLoanProductWithAdvancedMappings() {
+        final String productName = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory
+                .defaultWorkingCapitalLoanProductRequestWithCashAccounting().name(productName);
+
+        final AdvancedAccountingExpectation expected = WorkingCapitalLoanProductAdvancedAccountingTestHelper
+                .prepareAdvancedMappings(request, paymentTypeResolver, fineractFeignClient);
+        testContext().set(WC_ADVANCED_MAPPINGS_EXPECTED_CREATE, expected);
+
+        final PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_REQUEST, request);
+    }
+
+    @When("Admin updates Working Capital Loan Product with advanced mappings")
+    public void updateWorkingCapitalLoanProductWithAdvancedMappings() {
+        final PostWorkingCapitalLoanProductsResponse createResponse = testContext()
+                .get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE);
+        final Long resourceId = createResponse.getResourceId();
+        final PostWorkingCapitalLoanProductsRequest cashRequest = workingCapitalRequestFactory
+                .defaultWorkingCapitalLoanProductRequestWithCashAccounting();
+        final PutWorkingCapitalLoanProductsProductIdRequest updateRequest = buildCashBasedUpdateRequest(cashRequest);
+        final AdvancedAccountingExpectation expected = WorkingCapitalLoanProductAdvancedAccountingTestHelper
+                .prepareAdvancedMappings(updateRequest, paymentTypeResolver, fineractFeignClient);
+        testContext().set(WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE, expected);
+
+        final PutWorkingCapitalLoanProductsProductIdResponse response = ok(
+                () -> workingCapitalApi().updateWorkingCapitalLoanProduct(resourceId, updateRequest, Map.of()));
+
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_UPDATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_UPDATE_REQUEST, updateRequest);
+    }
+
+    @When("Admin updates Working Capital Loan Product with advanced mappings twice")
+    public void updateWorkingCapitalLoanProductWithAdvancedMappingsTwice() {
+        final PostWorkingCapitalLoanProductsResponse createResponse = testContext()
+                .get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE);
+        final Long resourceId = createResponse.getResourceId();
+
+        final PutWorkingCapitalLoanProductsProductIdRequest firstUpdateRequest = buildAdvancedMappingsUpdateRequest();
+        ok(() -> workingCapitalApi().updateWorkingCapitalLoanProduct(resourceId, firstUpdateRequest, Map.of()));
+        testContext().set(WC_ADVANCED_MAPPINGS_EXPECTED_FIRST_UPDATE, testContext().get(WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE));
+
+        final PutWorkingCapitalLoanProductsProductIdRequest secondUpdateRequest = buildAdvancedMappingsUpdateRequest();
+        final PutWorkingCapitalLoanProductsProductIdResponse response = ok(
+                () -> workingCapitalApi().updateWorkingCapitalLoanProduct(resourceId, secondUpdateRequest, Map.of()));
+
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_UPDATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_UPDATE_REQUEST, secondUpdateRequest);
+    }
+
     @Then("Working Capital Loan Product template has delinquencyStartTypeOptions containing:")
     public void verifyTemplateDelinquencyStartTypeOptions(final DataTable table) {
         final List<String> expectedOptions = table.asList();
@@ -1704,6 +1856,317 @@ public class WorkingCapitalStepDef extends AbstractStepDef {
         assertThat(template.getDelinquencyStartTypeOptions()).isNotNull().isNotEmpty();
         final List<String> actualCodes = template.getDelinquencyStartTypeOptions().stream().map(StringEnumOptionData::getCode).toList();
         assertThat(actualCodes).containsAll(expectedOptions);
+    }
+
+    @Then("Working Capital Loan Product template has advanced accounting options")
+    public void verifyTemplateAdvancedAccountingOptions() {
+        final GetWorkingCapitalLoanProductsTemplateResponse template = testContext()
+                .get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_TEMPLATE_RESPONSE);
+        WorkingCapitalLoanProductAdvancedAccountingTestHelper.assertTemplateHasOptions(template);
+    }
+
+    @Then("Working Capital Loan Product template advancedPaymentAllocationTypes contains:")
+    public void verifyTemplateAdvancedPaymentAllocationTypes(final DataTable table) {
+        final GetWorkingCapitalLoanProductsTemplateResponse template = testContext()
+                .get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_TEMPLATE_RESPONSE);
+        assertThat(template.getAdvancedPaymentAllocationTypes()).isNotNull().isNotEmpty();
+        final Map<String, String> actualCodeToValue = template.getAdvancedPaymentAllocationTypes().stream()
+                .collect(Collectors.toMap(StringEnumOptionData::getCode, StringEnumOptionData::getValue));
+        final SoftAssertions assertions = new SoftAssertions();
+        assertions.assertThat(actualCodeToValue).hasSize(table.asLists().size());
+        for (final List<String> row : table.asLists()) {
+            final String code = row.get(0);
+            final String expectedValue = row.get(1);
+            assertions.assertThat(actualCodeToValue).as("template missing allocation type code %s", code).containsKey(code);
+            assertions.assertThat(actualCodeToValue.get(code)).as("human readable name for %s", code).isEqualTo(expectedValue);
+        }
+        assertions.assertAll();
+    }
+
+    @When("Admin creates a new Working Capital Loan Product with payment allocation order:")
+    public void createWorkingCapitalLoanProductWithPaymentAllocationOrder(final DataTable table) {
+        final List<String> rules = table.asList();
+        final String productName = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory.defaultWorkingCapitalLoanProductRequest() //
+                .name(productName) //
+                .paymentAllocation(List.of(WorkingCapitalRequestFactory
+                        .createPaymentAllocation(PostPaymentAllocation.TransactionTypeEnum.DEFAULT.getValue(), rules)));
+        final PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_REQUEST, request);
+        checkWorkingCapitalLoanProductCreate();
+    }
+
+    @When("Admin updates Working Capital Loan Product payment allocation order:")
+    public void updateWorkingCapitalLoanProductPaymentAllocationOrder(final DataTable table) {
+        final List<String> rules = table.asList();
+        final PostWorkingCapitalLoanProductsResponse createResponse = testContext()
+                .get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE);
+        final Long resourceId = createResponse.getResourceId();
+        final PutWorkingCapitalLoanProductsProductIdRequest updateRequest = new PutWorkingCapitalLoanProductsProductIdRequest() //
+                .locale(LoanProductsRequestFactory.LOCALE_EN) //
+                .paymentAllocation(List.of(WorkingCapitalRequestFactory
+                        .createPaymentAllocation(PostPaymentAllocation.TransactionTypeEnum.DEFAULT.getValue(), rules)));
+        final PutWorkingCapitalLoanProductsProductIdResponse response = ok(
+                () -> workingCapitalApi().updateWorkingCapitalLoanProduct(resourceId, updateRequest, Map.of()));
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_UPDATE_RESPONSE, response);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_UPDATE_REQUEST, updateRequest);
+    }
+
+    @Then("Working Capital Loan Product payment allocation order is:")
+    public void verifyWorkingCapitalLoanProductPaymentAllocationOrder(final DataTable table) {
+        final PostWorkingCapitalLoanProductsResponse createResponse = testContext()
+                .get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE);
+        final Long resourceId = createResponse.getResourceId();
+        final GetWorkingCapitalLoanProductsProductIdResponse product = workingCapitalApi().retrieveOneWorkingCapitalLoanProduct(resourceId,
+                Map.of());
+        assertThat(product.getPaymentAllocation()).isNotNull().isNotEmpty();
+        final GetPaymentAllocation defaultAllocation = product.getPaymentAllocation().stream() //
+                .filter(pa -> PostPaymentAllocation.TransactionTypeEnum.DEFAULT.getValue().equals(pa.getTransactionType())) //
+                .findFirst() //
+                .orElseThrow(() -> new RuntimeException("No DEFAULT payment allocation found on product"));
+        final List<List<String>> rows = table.asLists();
+        final SoftAssertions assertions = new SoftAssertions();
+        assertions.assertThat(defaultAllocation.getPaymentAllocationOrder()).hasSize(rows.size());
+        for (final List<String> row : rows) {
+            final String expectedRule = row.get(0);
+            final Integer expectedOrder = Integer.valueOf(row.get(1));
+            final boolean match = defaultAllocation.getPaymentAllocationOrder().stream() //
+                    .anyMatch(p -> expectedRule.equals(p.getPaymentAllocationRule()) && expectedOrder.equals(p.getOrder()));
+            assertions.assertThat(match).as("expected payment allocation rule %s at order %d", expectedRule, expectedOrder).isTrue();
+        }
+        assertions.assertAll();
+    }
+
+    @Then("Admin failed to create a new Working Capital Loan Product with duplicate payment allocation rules")
+    public void createWorkingCapitalLoanProductWithDuplicatePaymentAllocationRulesFailed() {
+        final String productName = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        final List<String> duplicateRules = List.of(//
+                WorkingCapitalRequestFactory.DUE_PENALTY, WorkingCapitalRequestFactory.DUE_PENALTY, WorkingCapitalRequestFactory.DUE_FEE,
+                WorkingCapitalRequestFactory.DUE_PRINCIPAL, WorkingCapitalRequestFactory.IN_ADVANCE_FEE,
+                WorkingCapitalRequestFactory.IN_ADVANCE_PRINCIPAL);
+        final PostWorkingCapitalLoanProductsRequest request = workingCapitalRequestFactory.defaultWorkingCapitalLoanProductRequest() //
+                .name(productName) //
+                .paymentAllocation(List.of(WorkingCapitalRequestFactory
+                        .createPaymentAllocation(PostPaymentAllocation.TransactionTypeEnum.DEFAULT.getValue(), duplicateRules)));
+        final String errorMessage = ErrorMessageHelper.paymentAllocationRulesDuplicateFailure();
+        checkCreateWorkingCapitalLoanProductWithInvalidDataFailure(request, 400, errorMessage);
+    }
+
+    @Then("Working Capital Loan Product has advanced accounting mappings")
+    public void verifyProductHasAdvancedAccountingMappings() {
+        final GetWorkingCapitalLoanProductsProductIdResponse product = retrieveCreatedProduct();
+        final AdvancedAccountingExpectation expected = testContext().get().containsKey(WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE)
+                ? testContext().get(WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE)
+                : testContext().get(WC_ADVANCED_MAPPINGS_EXPECTED_CREATE);
+        WorkingCapitalLoanProductAdvancedAccountingTestHelper.assertProductHasExpectedAdvancedMappings(OBJECT_MAPPER, product, expected);
+    }
+
+    @Then("Working Capital Loan Product has latest advanced accounting mappings after second update")
+    public void verifyProductHasLatestAdvancedAccountingMappingsAfterSecondUpdate() {
+        final GetWorkingCapitalLoanProductsProductIdResponse product = retrieveCreatedProduct();
+        final AdvancedAccountingExpectation firstExpected = testContext().get(WC_ADVANCED_MAPPINGS_EXPECTED_FIRST_UPDATE);
+        final AdvancedAccountingExpectation secondExpected = testContext().get(WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE);
+
+        WorkingCapitalLoanProductAdvancedAccountingTestHelper.assertProductHasExpectedAdvancedMappings(OBJECT_MAPPER, product,
+                secondExpected);
+        assertThat(secondExpected.feeChargeId()).as("Fee mapping charge should be replaced on second update")
+                .isNotEqualTo(firstExpected.feeChargeId());
+        assertThat(secondExpected.penaltyChargeId()).as("Penalty mapping charge should be replaced on second update")
+                .isNotEqualTo(firstExpected.penaltyChargeId());
+    }
+
+    private PutWorkingCapitalLoanProductsProductIdRequest buildAdvancedMappingsUpdateRequest() {
+        final PostWorkingCapitalLoanProductsRequest cashRequest = workingCapitalRequestFactory
+                .defaultWorkingCapitalLoanProductRequestWithCashAccounting();
+        final PutWorkingCapitalLoanProductsProductIdRequest updateRequest = buildCashBasedUpdateRequest(cashRequest);
+        final AdvancedAccountingExpectation expected = WorkingCapitalLoanProductAdvancedAccountingTestHelper
+                .prepareAdvancedMappings(updateRequest, paymentTypeResolver, fineractFeignClient);
+        testContext().set(WC_ADVANCED_MAPPINGS_EXPECTED_UPDATE, expected);
+        return updateRequest;
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with null paymentTypeId in payment channel mappings")
+    public void attemptCreateWithNullPaymentTypeId() {
+        List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings = List
+                .of(new WorkingCapitalLoanPaymentChannelToFundSourceMappings().paymentTypeId(null)
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES)));
+        attemptCreateWithAdvancedMappings(paymentChannelMappings, buildDefaultChargeOffMappings(), buildDefaultWriteOffMappings());
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with null fundSourceAccountId in payment channel mappings")
+    public void attemptCreateWithNullFundSourceAccountId() {
+        List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings = List
+                .of(new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER)).fundSourceAccountId(null));
+        attemptCreateWithAdvancedMappings(paymentChannelMappings, buildDefaultChargeOffMappings(), buildDefaultWriteOffMappings());
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with null chargeOffReasonCodeValueId in charge-off mappings")
+    public void attemptCreateWithNullChargeOffReasonCodeValueId() {
+        List<WorkingCapitalPostChargeOffReasonToExpenseAccountMappings> chargeOffMappings = List
+                .of(new WorkingCapitalPostChargeOffReasonToExpenseAccountMappings().chargeOffReasonCodeValueId(null)
+                        .expenseAccountId(accountTypeResolver.resolve(DefaultAccountType.CREDIT_LOSS_BAD_DEBT)));
+        attemptCreateWithAdvancedMappings(buildDefaultPaymentChannelMappings(), chargeOffMappings, buildDefaultWriteOffMappings());
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with null expenseAccountId in charge-off mappings")
+    public void attemptCreateWithNullChargeOffExpenseAccountId() {
+        List<WorkingCapitalPostChargeOffReasonToExpenseAccountMappings> chargeOffMappings = List
+                .of(new WorkingCapitalPostChargeOffReasonToExpenseAccountMappings()
+                        .chargeOffReasonCodeValueId(
+                                codeValueResolver.resolve(CodeNames.CHARGE_OFF.getValue(), DefaultCodeValue.FRAUD.getName()))
+                        .expenseAccountId(null));
+        attemptCreateWithAdvancedMappings(buildDefaultPaymentChannelMappings(), chargeOffMappings, buildDefaultWriteOffMappings());
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with null writeOffReasonCodeValueId in write-off mappings")
+    public void attemptCreateWithNullWriteOffReasonCodeValueId() {
+        List<WorkingCapitalPostWriteOffReasonToExpenseAccountMappings> writeOffMappings = List
+                .of(new WorkingCapitalPostWriteOffReasonToExpenseAccountMappings().writeOffReasonCodeValueId(null)
+                        .expenseAccountId(accountTypeResolver.resolve(DefaultAccountType.WRITTEN_OFF)));
+        attemptCreateWithAdvancedMappings(buildDefaultPaymentChannelMappings(), buildDefaultChargeOffMappings(), writeOffMappings);
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with null expenseAccountId in write-off mappings")
+    public void attemptCreateWithNullWriteOffExpenseAccountId() {
+        List<WorkingCapitalPostWriteOffReasonToExpenseAccountMappings> writeOffMappings = List
+                .of(new WorkingCapitalPostWriteOffReasonToExpenseAccountMappings()
+                        .writeOffReasonCodeValueId(
+                                codeValueResolver.resolve(CodeNames.WRITE_OFF_REASON.getValue(), DefaultCodeValue.BAD_DEBT.getName()))
+                        .expenseAccountId(null));
+        attemptCreateWithAdvancedMappings(buildDefaultPaymentChannelMappings(), buildDefaultChargeOffMappings(), writeOffMappings);
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with duplicate paymentTypeId in payment channel mappings")
+    public void attemptCreateWithDuplicatePaymentTypeId() {
+        List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings = List.of(
+                new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER))
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES)),
+                new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER))
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.OTHER_RECEIVABLES)));
+        attemptCreateWithAdvancedMappings(paymentChannelMappings, buildDefaultChargeOffMappings(), buildDefaultWriteOffMappings());
+    }
+
+    @When("Admin attempts to create Working Capital Loan Product with duplicate fundSourceAccountId in payment channel mappings")
+    public void attemptCreateWithDuplicateFundSourceAccountId() {
+        List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings = List.of(
+                new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER))
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES)),
+                new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER))
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES)));
+        attemptCreateWithAdvancedMappings(paymentChannelMappings, buildDefaultChargeOffMappings(), buildDefaultWriteOffMappings());
+    }
+
+    @When("Admin creates Working Capital Loan Product with unique payment channel mappings")
+    public void createWithUniquePaymentChannelMappings() {
+        List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings = List.of(
+                new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER))
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES)),
+                new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                        .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.AUTOPAY))
+                        .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.OTHER_RECEIVABLES)));
+        PostWorkingCapitalLoanProductsRequest request = buildAdvancedMappingsRequest(paymentChannelMappings,
+                buildDefaultChargeOffMappings(), buildDefaultWriteOffMappings());
+        PostWorkingCapitalLoanProductsResponse response = createWorkingCapitalLoanProduct(request);
+        testContext().set(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE, response);
+    }
+
+    private List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> buildDefaultPaymentChannelMappings() {
+        return List.of(new WorkingCapitalLoanPaymentChannelToFundSourceMappings()
+                .paymentTypeId(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER))
+                .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES)));
+    }
+
+    private List<WorkingCapitalPostChargeOffReasonToExpenseAccountMappings> buildDefaultChargeOffMappings() {
+        return List.of(new WorkingCapitalPostChargeOffReasonToExpenseAccountMappings()
+                .chargeOffReasonCodeValueId(codeValueResolver.resolve(CodeNames.CHARGE_OFF.getValue(), DefaultCodeValue.FRAUD.getName()))
+                .expenseAccountId(accountTypeResolver.resolve(DefaultAccountType.CREDIT_LOSS_BAD_DEBT)));
+    }
+
+    private List<WorkingCapitalPostWriteOffReasonToExpenseAccountMappings> buildDefaultWriteOffMappings() {
+        return List.of(new WorkingCapitalPostWriteOffReasonToExpenseAccountMappings()
+                .writeOffReasonCodeValueId(
+                        codeValueResolver.resolve(CodeNames.WRITE_OFF_REASON.getValue(), DefaultCodeValue.BAD_DEBT.getName()))
+                .expenseAccountId(accountTypeResolver.resolve(DefaultAccountType.WRITTEN_OFF)));
+    }
+
+    private PostWorkingCapitalLoanProductsRequest buildAdvancedMappingsRequest(
+            List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings,
+            List<WorkingCapitalPostChargeOffReasonToExpenseAccountMappings> chargeOffMappings,
+            List<WorkingCapitalPostWriteOffReasonToExpenseAccountMappings> writeOffMappings) {
+        final String productName = DefaultWorkingCapitalLoanProduct.WCLP.getName() + Utils.randomStringGenerator("_", 10);
+        return workingCapitalRequestFactory.defaultWorkingCapitalLoanProductAllowAttributesOverrideRequest().name(productName)
+                .accountingRule(AccountingRuleEnum.CASH_BASED)
+                .fundSourceAccountId(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES))
+                .loanPortfolioAccountId(accountTypeResolver.resolve(DefaultAccountType.LOANS_RECEIVABLE))
+                .transfersInSuspenseAccountId(accountTypeResolver.resolve(DefaultAccountType.TRANSFER_IN_SUSPENSE_ACCOUNT))
+                .deferredIncomeLiabilityAccountId(accountTypeResolver.resolve(DefaultAccountType.DEFERRED_CAPITALIZED_INCOME))
+                .incomeFromDiscountFeeAccountId(accountTypeResolver.resolve(DefaultAccountType.INTEREST_INCOME))
+                .incomeFromFeeAccountId(accountTypeResolver.resolve(DefaultAccountType.FEE_INCOME))
+                .incomeFromPenaltyAccountId(accountTypeResolver.resolve(DefaultAccountType.FEE_INCOME))
+                .incomeFromRecoveryAccountId(accountTypeResolver.resolve(DefaultAccountType.RECOVERIES))
+                .writeOffAccountId(accountTypeResolver.resolve(DefaultAccountType.WRITTEN_OFF))
+                .overpaymentLiabilityAccountId(accountTypeResolver.resolve(DefaultAccountType.OVERPAYMENT_ACCOUNT))
+                .receivableFeeAccountId(accountTypeResolver.resolve(DefaultAccountType.INTEREST_FEE_RECEIVABLE))
+                .receivablePenaltyAccountId(accountTypeResolver.resolve(DefaultAccountType.INTEREST_FEE_RECEIVABLE))
+                .paymentChannelToFundSourceMappings(paymentChannelMappings).chargeOffReasonToExpenseAccountMappings(chargeOffMappings)
+                .writeOffReasonsToExpenseMappings(writeOffMappings).feeToIncomeAccountMappings(List.of())
+                .penaltyToIncomeAccountMappings(List.of());
+    }
+
+    private void attemptCreateWithAdvancedMappings(List<WorkingCapitalLoanPaymentChannelToFundSourceMappings> paymentChannelMappings,
+            List<WorkingCapitalPostChargeOffReasonToExpenseAccountMappings> chargeOffMappings,
+            List<WorkingCapitalPostWriteOffReasonToExpenseAccountMappings> writeOffMappings) {
+        PostWorkingCapitalLoanProductsRequest request = buildAdvancedMappingsRequest(paymentChannelMappings, chargeOffMappings,
+                writeOffMappings);
+        try {
+            createWorkingCapitalLoanProduct(request);
+        } catch (CallFailedRuntimeException e) {
+            testContext().set(TestContextKey.ERROR_RESPONSE, e);
+        }
+    }
+
+    @Then("Admin gets validation error with status code {int} and message {string}")
+    public void validateErrorResponse(int expectedStatusCode, String expectedErrorMessage) {
+        CallFailedRuntimeException exception = testContext().get(TestContextKey.ERROR_RESPONSE);
+        assertThat(exception).as(ErrorMessageHelper.incorrectExpectedValueInResponse()).isNotNull();
+        assertThat(exception.getStatus()).as(ErrorMessageHelper.incorrectExpectedValueInResponse()).isEqualTo(expectedStatusCode);
+        assertThat(exception.getDeveloperMessage()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .contains(expectedErrorMessage);
+    }
+
+    @Then("Working Capital Loan Product is created successfully with two payment channel mappings")
+    public void verifyWorkingCapitalLoanProductCreatedWithTwoMappings() {
+        PostWorkingCapitalLoanProductsResponse response = testContext().get(TestContextKey.WORKING_CAPITAL_LOAN_PRODUCT_CREATE_RESPONSE);
+        assertThat(response).as(ErrorMessageHelper.incorrectExpectedValueInResponse()).isNotNull();
+        assertThat(response.getResourceId()).as(ErrorMessageHelper.incorrectExpectedValueInResponse()).isNotNull();
+        assertThat(response.getResourceId()).as(ErrorMessageHelper.incorrectExpectedValueInResponse()).isGreaterThan(0L);
+
+        Long productId = response.getResourceId();
+        GetWorkingCapitalLoanProductsProductIdResponse productDetails = ok(
+                () -> workingCapitalApi().retrieveOneWorkingCapitalLoanProduct(productId, Map.of()));
+
+        assertThat(productDetails).as(ErrorMessageHelper.incorrectExpectedValueInResponse()).isNotNull();
+        assertThat(productDetails.getPaymentChannelToFundSourceMappings()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .isNotNull();
+        assertThat(productDetails.getPaymentChannelToFundSourceMappings()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .hasSize(2);
+
+        List<PaymentTypeToGLAccountMapper> mappings = productDetails.getPaymentChannelToFundSourceMappings();
+        assertThat(mappings.get(0).getPaymentType().getId()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .isEqualTo(paymentTypeResolver.resolve(DefaultPaymentType.MONEY_TRANSFER));
+        assertThat(mappings.get(0).getFundSourceAccount().getId()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .isEqualTo(accountTypeResolver.resolve(DefaultAccountType.FUND_RECEIVABLES));
+        assertThat(mappings.get(1).getPaymentType().getId()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .isEqualTo(paymentTypeResolver.resolve(DefaultPaymentType.AUTOPAY));
+        assertThat(mappings.get(1).getFundSourceAccount().getId()).as(ErrorMessageHelper.incorrectExpectedValueInResponse())
+                .isEqualTo(accountTypeResolver.resolve(DefaultAccountType.OTHER_RECEIVABLES));
     }
 
 }
